--- a/src/app/public/pages/about-me/about-me.component.html
+++ b/src/app/public/pages/about-me/about-me.component.html
@@ -4,65 +4,66 @@
   </a>
   <div class="row">
     <div class="col-xl-6 col-lg-12 col-md-12">
-        <div class="containerimgAbout">
-            <!-- <img class="imgAbout" src="assets/img/jonathan04.jpeg" alt="" /> -->
-            <!-- <h2>hola mundo</h2> -->
-        </div>
+      <div class="containerimgAbout">
+        <img class="imgAbout" src="assets/img/jonathan04.jpeg" alt="" />
+        <!-- <h2>hola mundo</h2> -->
+      </div>
     </div>
-    <div class="col-xl-6  col-lg-12 col-md-12 " >
+    <div class="col-xl-6 col-lg-12 col-md-12">
       <div class="container-text-about">
-        <h3> Quién Soy, conoseme</h3>
+        <h3>Quién Soy, conoseme</h3>
         <P>
-            ❝El éxito significa hacer lo mejor que podemos con lo que tenemos. El
+          ❝El éxito significa hacer lo mejor que podemos con lo que tenemos. El
           éxito está en el hacer, no en el conseguir; en el intentar, no en el
           triunfar. El éxito es un estándar personal, alcanzar lo más alto que
-          hay en nosotros, convertirnos en todo lo que podemos ser. ❞</P>
-          <span class="autor"><em>Zig Ziglar</em></span>
-          <div class="container-aboutMe-iconos">
-            <ul class="social-icons">
-                <li>
-                  <a
-                    href="https://www.facebook.com/tatan.uzhca/?viewas=100000686899395&locale=es_LA"
-                    class="social-link"
-                    target="_blank"
-                    ><i class="bi bi-facebook" aria-hidden="true"></i
-                  ></a>
-                </li>
-                <li>
-                  <a
-                    href="https://myaccount.google.com/profile/profiles-summary?hl=es_419&utm_source=OGB&utm_medium=act"
-                    class="social-link"
-                    target="_blank"
-                    ><i class="bi bi-google" aria-hidden="true"></i
-                  ></a>
-                </li>
-                <li>
-                  <a
-                    href="https://www.instagram.com/jonnathan0106/"
-                    class="social-link"
-                    target="_blank"
-                    ><i class="bi bi-instagram" aria-hidden="true"></i
-                  ></a>
-                </li>
-                <li>
-                  <a
-                    href="https://github.com/JonnathanUzhca"
-                    class="social-link"
-                    target="_blank"
-                    ><i class="bi bi-github" aria-hidden="true"></i
-                  ></a>
-                </li>
-          
-                <li>
-                  <a
-                    href="https://www.tiktok.com/@jonnathanuzhca?_t=8mc22cFs8OL&_r=1"
-                    class="social-link"
-                    target="_blank"
-                    ><i class="bi bi-tiktok" aria-hidden="true"></i
-                  ></a>
-                </li>
-              </ul>
-          </div>
+          hay en nosotros, convertirnos en todo lo que podemos ser. ❞</P
+        >
+        <span class="autor"><em>Zig Ziglar</em></span>
+        <div class="container-aboutMe-iconos">
+          <ul class="social-icons">
+            <li>
+              <a
+                href="https://www.facebook.com/tatan.uzhca/?viewas=100000686899395&locale=es_LA"
+                class="social-link"
+                target="_blank"
+                ><i class="bi bi-facebook" aria-hidden="true"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://myaccount.google.com/profile/profiles-summary?hl=es_419&utm_source=OGB&utm_medium=act"
+                class="social-link"
+                target="_blank"
+                ><i class="bi bi-google" aria-hidden="true"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.instagram.com/jonnathan0106/"
+                class="social-link"
+                target="_blank"
+                ><i class="bi bi-instagram" aria-hidden="true"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://github.com/JonnathanUzhca"
+                class="social-link"
+                target="_blank"
+                ><i class="bi bi-github" aria-hidden="true"></i
+              ></a>
+            </li>
+
+            <li>
+              <a
+                href="https://www.tiktok.com/@jonnathanuzhca?_t=8mc22cFs8OL&_r=1"
+                class="social-link"
+                target="_blank"
+                ><i class="bi bi-tiktok" aria-hidden="true"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
@@ -81,14 +82,74 @@
   </div>
 </div>
 
-<!-- <div class="row">
-  <div class="col-xl-6 col-lg-12 col-md-12 col-ms-6" style="background: red;">
-      <h2>hola mundo</h2>
+<div class="row">
+  <div class="col-xl-6 col-lg-12 col-md-12 col-ms-6">
+    <div class="container-infor-text">
+      <p class="has-dropcap">
+        Hola, mi nombre es <span class="nombre">Jonnathan Uzhca.</span> 
+        <br>
+        Un ingeniero de sistemas dedicado a la programacion
+        <br>desde que comencé en la universidad, me apasioné
+        profundamente por la ingeniería de sistemas. Desde el primer día, supe
+        que este era el camino que quería seguir. Durante mis años de estudio,
+        me enfoqué en aprender y entender cada aspecto de esta carrera, desde la
+        programación básica hasta las complejidades de los sistemas integrados.
+        Mi curiosidad y deseo de conocer más me llevaron a explorar diferentes
+        tecnologías y lenguajes de programación, lo que me permitió desarrollar
+        una base sólida en este campo. 
+        <br>
+        <br>
+        Como programador junior, he trabajado en
+        diversos proyectos que me han permitido aplicar y expandir mis
+        conocimientos. Mi experiencia incluye el desarrollo de aplicaciones web
+        y móviles, la implementación de APIs RESTful, y el uso de frameworks
+        como Angular y Django REST Framework. A lo largo de estos proyectos, he
+        aprendido la importancia de escribir código limpio y eficiente, así como
+        de colaborar efectivamente con otros desarrolladores. Cada desafío que
+        enfrenté me enseñó algo nuevo y me ayudó a crecer profesionalmente. 
+        <br>
+        <br>
+        Miamabilidad y capacidad para trabajar en equipo son cualidades que
+        considero esenciales en mi carrera. Siempre estoy dispuesto a ayudar a
+        mis compañeros y a compartir mis conocimientos. Creo firmemente en la
+        importancia de un ambiente de trabajo colaborativo y positivo, donde
+        todos puedan aprender y crecer juntos. La confianza y el respeto mutuo
+        son fundamentales para mí, y siempre me esfuerzo por fomentar estas
+        cualidades en cada equipo del que formo parte. 
+        <br>
+        <br>
+        La honradez es otro de los valores que rige mi vida profesional. Me enorgullezco de ser
+        transparente y sincero en todas mis interacciones, ya sea con colegas,
+        superiores o clientes. Creo que la integridad es la base de cualquier
+        relación laboral exitosa, y siempre me esfuerzo por mantener altos
+        estándares éticos en todo lo que hago. Ser honesto y directo me ha
+        ayudado a construir relaciones de confianza y a ganarme el respeto de
+        quienes me rodean. 
+        <br>
+        <br>
+        Puntualidad y esfuerzo son dos principios que siempre
+        he valorado. Creo que ser puntual demuestra respeto por el tiempo de los
+        demás y una actitud profesional. Además, me esfuerzo constantemente por
+        aprender y mejorar mis habilidades. Cada día representa una oportunidad
+        para superar obstáculos y adquirir nuevos conocimientos. Mi constancia y
+        dedicación me han permitido avanzar en mi carrera y enfrentar desafíos
+        con confianza. 
+        <br>
+        <br>
+        En resumen, soy un programador junior apasionado y
+        comprometido con mi desarrollo profesional. Mi experiencia, amabilidad,
+        confianza, honradez, puntualidad y esfuerzo diario me definen. Estoy
+        siempre dispuesto a aprender y superar cualquier obstáculo que se
+        presente. Busco un entorno donde pueda continuar creciendo y aportando
+        mis habilidades. Confío en que mi perfil pueda ser de interés para
+        obtener una oportunidad laboral donde pueda seguir desarrollándome y
+        contribuyendo al éxito del equipo.
+      </p>
+    </div>
   </div>
-  <div class="col-xl-6 col-md-6 col-ms-6" style="background: rgb(0, 26, 255);">
-      <h2>Como esta </h2>
-
+  <div class="col-xl-6 col-md-6 col-ms-6">
+    <div class="container-info-img">
+      <img src="assets/img/jonathan07.jpeg" alt="" />
+    </div>
   </div>
-</div> -->
-
- 
+</div>
