--- a/src/app/public/pages/about-me/about-me.component.html
+++ b/src/app/public/pages/about-me/about-me.component.html
@@ -86,64 +86,64 @@
   <div class="col-xl-6 col-lg-12 col-md-12 col-ms-6">
     <div class="container-infor-text">
       <p class="has-dropcap">
-        Hola, mi nombre es <span class="nombre">Jonnathan Uzhca.</span> 
-        <br>
-        Un ingeniero de sistemas dedicado a la programacion
-        <br>desde que comencé en la universidad, me apasioné
-        profundamente por la ingeniería de sistemas. Desde el primer día, supe
-        que este era el camino que quería seguir. Durante mis años de estudio,
-        me enfoqué en aprender y entender cada aspecto de esta carrera, desde la
-        programación básica hasta las complejidades de los sistemas integrados.
-        Mi curiosidad y deseo de conocer más me llevaron a explorar diferentes
-        tecnologías y lenguajes de programación, lo que me permitió desarrollar
-        una base sólida en este campo. 
-        <br>
-        <br>
-        Como programador junior, he trabajado en
-        diversos proyectos que me han permitido aplicar y expandir mis
-        conocimientos. Mi experiencia incluye el desarrollo de aplicaciones web
-        y móviles, la implementación de APIs RESTful, y el uso de frameworks
-        como Angular y Django REST Framework. A lo largo de estos proyectos, he
-        aprendido la importancia de escribir código limpio y eficiente, así como
-        de colaborar efectivamente con otros desarrolladores. Cada desafío que
-        enfrenté me enseñó algo nuevo y me ayudó a crecer profesionalmente. 
-        <br>
-        <br>
-        Miamabilidad y capacidad para trabajar en equipo son cualidades que
+        Hola, mi nombre es <span class="nombre">Jonnathan Uzhca.</span>
+        <br />
+        Un ingeniero de sistemas dedicado a la programacion desde que comencé en
+        la universidad, me apasioné profundamente por la ingeniería de sistemas.
+        Desde el primer día, supe que este era el camino que quería seguir.
+        Durante mis años de estudio, me enfoqué en aprender y entender cada
+        aspecto de esta carrera, desde la programación básica hasta las
+        complejidades de los sistemas integrados. Mi curiosidad y deseo de
+        conocer más me llevaron a explorar diferentes tecnologías y lenguajes de
+        programación, lo que me permitió desarrollar una base sólida en este
+        campo.
+        <br />
+        <br />
+        Como programador junior, he trabajado en diversos proyectos que me han
+        permitido aplicar y expandir mis conocimientos. Mi experiencia incluye
+        el desarrollo de aplicaciones web y móviles, la implementación de APIs
+        RESTful, y el uso de frameworks como Angular y Django REST Framework. A
+        lo largo de estos proyectos, he aprendido la importancia de escribir
+        código limpio y eficiente, así como de colaborar efectivamente con otros
+        desarrolladores. Cada desafío que enfrenté me enseñó algo nuevo y me
+        ayudó a crecer profesionalmente.
+        <br />
+        <br />
+        Mi amabilidad y capacidad para trabajar en equipo son cualidades que
         considero esenciales en mi carrera. Siempre estoy dispuesto a ayudar a
         mis compañeros y a compartir mis conocimientos. Creo firmemente en la
         importancia de un ambiente de trabajo colaborativo y positivo, donde
         todos puedan aprender y crecer juntos. La confianza y el respeto mutuo
         son fundamentales para mí, y siempre me esfuerzo por fomentar estas
-        cualidades en cada equipo del que formo parte. 
-        <br>
-        <br>
-        La honradez es otro de los valores que rige mi vida profesional. Me enorgullezco de ser
-        transparente y sincero en todas mis interacciones, ya sea con colegas,
-        superiores o clientes. Creo que la integridad es la base de cualquier
-        relación laboral exitosa, y siempre me esfuerzo por mantener altos
-        estándares éticos en todo lo que hago. Ser honesto y directo me ha
-        ayudado a construir relaciones de confianza y a ganarme el respeto de
-        quienes me rodean. 
-        <br>
-        <br>
-        Puntualidad y esfuerzo son dos principios que siempre
-        he valorado. Creo que ser puntual demuestra respeto por el tiempo de los
-        demás y una actitud profesional. Además, me esfuerzo constantemente por
-        aprender y mejorar mis habilidades. Cada día representa una oportunidad
-        para superar obstáculos y adquirir nuevos conocimientos. Mi constancia y
+        cualidades en cada equipo del que formo parte.
+        <br />
+        <br />
+        La honradez es otro de los valores que rige mi vida profesional. Me
+        enorgullezco de ser transparente y sincero en todas mis interacciones,
+        ya sea con colegas, superiores o clientes. Creo que la integridad es la
+        base de cualquier relación laboral exitosa, y siempre me esfuerzo por
+        mantener altos estándares éticos en todo lo que hago. Ser honesto y
+        directo me ha ayudado a construir relaciones de confianza y a ganarme el
+        respeto de quienes me rodean.
+        <br />
+        <br />
+        Puntualidad y esfuerzo son dos principios que siempre he valorado. Creo
+        que ser puntual demuestra respeto por el tiempo de los demás y una
+        actitud profesional. Además, me esfuerzo constantemente por aprender y
+        mejorar mis habilidades. Cada día representa una oportunidad para
+        superar obstáculos y adquirir nuevos conocimientos. Mi constancia y
         dedicación me han permitido avanzar en mi carrera y enfrentar desafíos
-        con confianza. 
-        <br>
-        <br>
-        En resumen, soy un programador junior apasionado y
-        comprometido con mi desarrollo profesional. Mi experiencia, amabilidad,
-        confianza, honradez, puntualidad y esfuerzo diario me definen. Estoy
-        siempre dispuesto a aprender y superar cualquier obstáculo que se
-        presente. Busco un entorno donde pueda continuar creciendo y aportando
-        mis habilidades. Confío en que mi perfil pueda ser de interés para
-        obtener una oportunidad laboral donde pueda seguir desarrollándome y
-        contribuyendo al éxito del equipo.
+        con confianza.
+        <br />
+        <br />
+        En resumen, soy un programador junior apasionado y comprometido con mi
+        desarrollo profesional. Mi experiencia, amabilidad, confianza, honradez,
+        puntualidad y esfuerzo diario me definen. Estoy siempre dispuesto a
+        aprender y superar cualquier obstáculo que se presente. Busco un entorno
+        donde pueda continuar creciendo y aportando mis habilidades. Confío en
+        que mi perfil pueda ser de interés para obtener una oportunidad laboral
+        donde pueda seguir desarrollándome y contribuyendo como persona y
+        profesional.
       </p>
     </div>
   </div>
@@ -151,5 +151,145 @@
     <div class="container-info-img">
       <img src="assets/img/jonathan07.jpeg" alt="" />
     </div>
+    <div class="container-info-img-text">
+      <span class="skill-title">Mis Habilidades</span>
+      <div class="containe-info-skills">
+        <span class="hability">Html</span>
+        <span class="hability">Css</span>
+        <span class="hability">JavaScript</span>
+        <span class="hability">Java</span>
+        <span class="hability">Django</span>
+        <span class="hability">Python</span>
+        <span class="hability">Angular</span>
+        <span class="hability">Figma</span>
+        <span class="hability">SQL</span>
+        <span class="hability">PostgresSQL</span>
+        <span class="hability">MySQL</span>
+        <span class="hability">React</span>
+      </div>
+    </div>
+    <div class="container-info-img-conpetencias">
+      <span class="skill-title">Competencias Especificas</span>
+      <div class="containe-info-skills">
+        <ul class="skills-text">
+          <li>
+            <a>Crear y conceptualizar</a>
+            <span class="porcentaje">95%</span>
+          </li>
+          <li>
+            <a>Adaptarse y afrontar</a>
+            <span class="porcentaje">100%</span>
+          </li>
+          <li>
+            <a>Interactuar y presentar</a>
+            <span class="porcentaje">90%</span>
+          </li>
+          <li>
+            <a>Liderar y decidir</a>
+            <span class="porcentaje">97%</span>
+          </li>
+          <li>
+            <a>Apoyar y cooperar</a>
+            <span class="porcentaje">100%</span>
+          </li>
+          <li>
+            <a>Analizar y interpretar</a>
+            <span class="porcentaje">90%</span>
+          </li>
+          <li>
+            <a>Emprender y actuar</a>
+            <span class="porcentaje">97%</span>
+          </li>
+          <li>
+            <a>Organizar y ejecutar</a>
+            <span class="porcentaje">100%</span>
+          </li>
+          <li>
+            <a>Iniciativa</a>
+            <span class="porcentaje">100%</span>
+          </li>
+          <li>
+            <a>Independencia</a>
+            <span class="porcentaje">100%</span>
+          </li>
+          <li>
+            <a>Comunicación</a>
+            <span class="porcentaje">100%</span>
+          </li>
+          <li>
+            <a>Honestidad</a>
+            <span class="porcentaje">100%</span>
+          </li>
+          <li>
+            <a>Trabajo en equipo</a>
+            <span class="porcentaje">100%</span>
+          </li>
+          <li>
+            <a>Responsabilidad</a>
+            <span class="porcentaje">100%</span>
+          </li>
+          <li>
+            <a>Toma de decisiones</a>
+            <span class="porcentaje">100%</span>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="col-xl-12 col-md-12 col-ms-12">
+    <div class="container-study-info">
+      <span class="skill-title">Mis Estudios</span>
+      <div class="study-info">
+        <h3>Colegio Técnico San Francisco de Sales</h3>
+        <span> 13/05/2013</span>
+        <br />
+        <span> En la carrera de ciencias(Generales)</span>
+      </div>
+      <div class="study-info">
+        <h3>Universidad Politécnica Salesiana</h3>
+        <span> 2018 Sep - Al presente</span><br />
+        <span> Carrera de ingeniería de sistemas mención gestión.</span>
+      </div>
+    </div>
+    <div class="container-curso-info">
+      <span class="skill-title">Mis Cursos</span>
+      <div class="curso-info">
+        <h3>Angular desde cero a experto</h3>
+        <p>
+          Poseo experiencia en el desarrollo con Angular, desde la construcción
+          de aplicaciones básicas hasta la implementación de soluciones
+          avanzadas. Mi habilidad con Angular abarca desde el dominio de los
+          conceptos fundamentales hasta la resolución de desafíos complejos, lo
+          que me ha permitido avanzar desde nivel inicial hasta convertirme en
+          un experto en la plataforma. Estoy capacitado para diseñar
+          arquitecturas robustas, optimizar el rendimiento de las aplicaciones y
+          mantener prácticas de desarrollo eficientes.
+        </p>
+      </div>
+      <div class="curso-info">
+        <h3>Django REST Framework de cero a experto</h3>
+        <p>
+          Poseo conocimientos en Django REST Framework, desde su uso básico
+          hasta un nivel experto. He trabajado en proyectos donde he
+          implementado APIs robustas y seguras utilizando este framework,
+          permitiendo una comunicación eficiente entre el frontend y el backend.
+          Mi experiencia me ha llevado a comprender a fondo los principios y
+          prácticas recomendadas de Django REST Framework.
+        </p>
+      </div>
+      <div class="curso-info">
+        <h3>Universidad Java - De Cero a Experto - Más Completo +106 hrs</h3>
+        <p>
+          Poseo un conocimiento profundo y habilidades en el lenguajes de Java
+          es uno de los primeros lenguajes que aprendi en la universidad desde
+          ahi me comprometi a seguir avanzando y conociendo mas lenjuges, Este
+          curso abarco una amplia gama de temas, desde los fundamentos básicos
+          hasta técnicas avanzadas, proporcionándome una base sólida para
+          sobresalir en el mundo de la programación en Java.
+        </p>
+      </div>
+    </div>
   </div>
 </div>
+
+<app-footer></app-footer>
