--- a/src/app/public/pages/about-me/about-me.component.scss
+++ b/src/app/public/pages/about-me/about-me.component.scss
@@ -4,10 +4,7 @@
 }
 
 .container-aboutMe {
-    // position: relative;
-    background: #13293d;
-    // width: 100%;
-    // height: 100vh;
+  background: #13293d;
 }
 
 .imgAbout {
@@ -19,17 +16,14 @@
 }
 
 .custom-shape-divider-bottom-1719294244 {
-//   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
   overflow: hidden;
   line-height: 0;
-  // height: 100px;
 }
 
 .custom-shape-divider-bottom-1719294244 svg {
-//   position: relative;
   display: block;
   width: calc(100% + 1.3px);
   height: 167px;
@@ -69,7 +63,6 @@ button:hover {
 button:before,
 button:after {
   content: "";
-//   position: absolute;
   top: 0;
   right: 0;
   height: 3px;
@@ -84,24 +77,12 @@ button:after {
   left: 0;
   bottom: 0;
 }
+
 button:hover:before,
 button:hover:after {
   width: 100%;
   transition: 800ms ease all;
 }
-
-// //   fin de button
-// // texto  de about
-// .comillas {
-//   font-size: 90px;
-//   margin: 0;
-//   padding: 0;
-// }
-
-// .autor {
-//   position: relative;
-//   left: 90%;
-// }
 
 .container-text-about {
   padding: 8% 12% 0 0;
@@ -146,18 +127,17 @@ i {
   transition: transform 0.3s ease;
 }
 
-.container-infor-text{
-  margin: 140px 30px 0px 170px;
+.container-infor-text {
+  margin: 140px 30px 0px 370px;
   text-align: justify;
 }
 
-.container-info-img img{
-  margin: 220px 0;
-  width: 600px;
-  height: 800px;
+.container-info-img img {
+  margin: 80px 0 32px 0;
+  width: 410px;
+  height: 580px;
   border-radius: 20px;
 }
-
 
 .has-dropcap:first-letter {
   font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
@@ -165,70 +145,133 @@ i {
   font-size: 5rem;
   line-height: 0.35;
   margin: 0.1em 0.1em 0.1em 0;
-  color: #3E92CC;
+  color: #3e92cc;
 }
 
-.nombre{
+.nombre {
   color: #2276b3;
   font-size: 27px;
   font-weight: 500;
 }
 
-// .container-aboutMe-iconos {
-//     padding: 42px 0;
-// }
+.skill-title {
+  color: #2276b3;
+  font-size: 43px;
+}
+.containe-info-skills {
+  width: 100%;
+  max-width: 500px;
+  padding: 10px;
+}
 
-// fin de texto de about
+.hability {
+  display: inline-block;
+  padding: 3px 12px;
+}
+
+.hability:hover {
+  color: #3e92cc;
+  cursor: pointer;
+  transform: scale(1.4);
+}
+
+.container-info-img-conpetencias{
+  // background: red;
+  width: 60%;
+}
+
+.skills-text{
+  list-style-type: none;
+}
+
+.skills-text li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+.container-study-info {
+  margin: 40px 370px;
+  // text-align: justify;
+} 
+
+.container-curso-info{
+  margin: 40px 370px;
+
+}
+
+.study-info {
+  margin: 19px 0;
+  h3{
+    color: #72a6cb;
+    font-style: italic;
+  }
+  span{
+    margin: 20px ;
+  }
+}
+
+.curso-info{
+  margin: 19px 0;
+  h3{
+    color: #72a6cb;
+    font-style: italic;
+  }
+  p{
+    margin: 20px ;
+  }
+}
 
 //  resposibe
 
 @media (min-width: 290px) and (max-width: 365px) {
   .container-text-about {
     position: relative;
-    margin: 0 20px ;
+    margin: 0 20px;
     left: 6%;
     // padding: 5px 70px;
     color: white;
   }
-  
+
   .container-text-about h3 {
     font-size: 55px;
   }
-  
+
   .container-text-about p {
     padding: 20px 0 0 0;
     font-size: 15px;
     text-align: justify;
   }
-    .imgAbout {
-      left: 9%;
-      width: 300px;
-      height: 300px;
-    }
+  .imgAbout {
+    left: 9%;
+    width: 300px;
+    height: 300px;
+  }
 
-    .autor {
-      position: relative;
-      left: 70%;
-      // margin-top: 412px;
+  .autor {
+    position: relative;
+    left: 70%;
+    // margin-top: 412px;
   }
 
   .custom-shape-divider-bottom-1719294244 svg {
-      height: 80px;
+    height: 80px;
   }
 
-  .container-info-img img{
+  .container-info-img img {
     margin: 10px 20px;
     width: 310px;
     height: 580px;
     border-radius: 20px;
   }
 
-  .container-infor-text{
-    margin: 70px 30px ;
+  .container-infor-text {
+    margin: 70px 30px;
     text-align: justify;
   }
 
-  .nombre{
+  .nombre {
     color: #2276b3;
     font-size: 18px;
     font-weight: 500;
@@ -240,97 +283,97 @@ i {
     font-size: 4rem;
     line-height: 0.35;
     margin: 0.1em 0.1em 0.1em 0;
-    color: #3E92CC;
+    color: #3e92cc;
   }
-
 }
 
-@media (min-width: 365px) and (max-width: 625px) {  
-  
-    .container-text-about {
-      position: relative;
-      margin: 0 20px ;
-      left: 6%;
-      // padding: 5px 70px;
-      color: white;
-    }
-    
-    .container-text-about h3 {
-      font-size: 55px;
-    }
-    
-    .container-text-about p {
-      padding: 20px 0 0 0;
-      font-size: 15px;
-      text-align: justify;
-    }
+@media (min-width: 365px) and (max-width: 625px) {
+  .container-text-about {
+    position: relative;
+    margin: 0 20px;
+    left: 6%;
+    // padding: 5px 70px;
+    color: white;
+  }
 
-    .imgAbout {
-        left: 13%;
-        width: 300px;
-        height: 300px;
-    }
+  .container-text-about h3 {
+    font-size: 55px;
+  }
 
-    .autor {
-        position: relative;
-        left: 70%;
-        // margin-top: 412px;
-    }
+  .container-text-about p {
+    padding: 20px 0 0 0;
+    font-size: 15px;
+    text-align: justify;
+  }
 
-    .custom-shape-divider-bottom-1719294244 svg {
-        height: 80px;
-    }
+  .imgAbout {
+    left: 13%;
+    width: 300px;
+    height: 300px;
+  }
 
-    .container-info-img img{
-      margin: 10px 20px;
-      width: 350px;
-      height: 580px;
-      border-radius: 20px;
-    }
+  .autor {
+    position: relative;
+    left: 70%;
+    // margin-top: 412px;
+  }
 
-    .container-infor-text{
-      margin: 70px 30px ;
-      text-align: justify;
-    }
+  .custom-shape-divider-bottom-1719294244 {
+    position: relative;
+    bottom: -1px;
+  }
 
-    .nombre{
-      color: #2276b3;
-      font-size: 18px;
-      font-weight: 500;
-    }
+  .custom-shape-divider-bottom-1719294244 svg {
+    height: 80px;
+  }
 
-    .has-dropcap:first-letter {
-      font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
-      float: left;
-      font-size: 4rem;
-      line-height: 0.35;
-      margin: 0.1em 0.1em 0.1em 0;
-      color: #3E92CC;
-    }
-    
+  .container-info-img img {
+    margin: 10px 20px;
+    width: 350px;
+    height: 580px;
+    border-radius: 20px;
+  }
+
+  .container-infor-text {
+    margin: 70px 30px;
+    text-align: justify;
+  }
+
+  .nombre {
+    color: #2276b3;
+    font-size: 18px;
+    font-weight: 500;
+  }
+
+  .has-dropcap:first-letter {
+    font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
+    float: left;
+    font-size: 4rem;
+    line-height: 0.35;
+    margin: 0.1em 0.1em 0.1em 0;
+    color: #3e92cc;
+  }
 }
 
 @media (min-width: 625px) and (max-width: 855px) {
-    .imgAbout {
-        left: 15%;
+  .imgAbout {
+    left: 15%;
+  }
+  //     .container-aboutMe {
+  //         height: 133vh;
+  //     }
 
-    }
-//     .container-aboutMe {
-//         height: 133vh;
-//     }
+  //     .custom-shape-divider-bottom-1719294244 {
+  //         position: relative;
+  //         bottom: 81px;
+  //     }
 
-//     .custom-shape-divider-bottom-1719294244 {
-//         position: relative;
-//         bottom: 81px;
-//     }
-
-//     .container-text-about {
-//         // background: green;
-//         margin: 0 40px;
-//         padding: 5px 30px;
-//     }
+  //     .container-text-about {
+  //         // background: green;
+  //         margin: 0 40px;
+  //         padding: 5px 30px;
+  //     }
 }
-
 
 // @media (min-width: 700px) and (max-width: 746px) {
 //     .imgAbout {
@@ -343,8 +386,6 @@ i {
 //         position: relative;
 //         bottom: 75px;
 //     }
-
-  
 
 //     .container-aboutMe {
 //         height: 128vh;
@@ -451,7 +492,7 @@ i {
 // }
 
 // @media (min-width: 467px) and (max-width: 491px) {
-   
+
 //     .imgAbout {
 //         left: 10%;
 //         width: 360px;
@@ -472,7 +513,7 @@ i {
 //         position: relative;
 //         bottom: 56px;
 //     }
-        
+
 //     .autor {
 //         position: relative;
 //         left: 80%;
@@ -480,7 +521,7 @@ i {
 // }
 
 // @media (min-width: 442px) and (max-width: 467px) {
-    
+
 //     .container-aboutMe {
 //         height: 160vh;
 //     }
@@ -624,7 +665,7 @@ i {
 //         font-size: 55px;
 //     }
 //     .custom-shape-divider-bottom-1719294244 svg {
-        
+
 //         height: 75px;
 //       }
 
@@ -671,10 +712,9 @@ i {
 //       }
 
 //       .custom-shape-divider-bottom-1719294244 svg {
-        
+
 //         height: 70px;
 //       }
-
 
 // }
 // fin resposibe
