--- a/src/app/public/pages/about-me/about-me.component.html
+++ b/src/app/public/pages/about-me/about-me.component.html
@@ -166,6 +166,7 @@
         <span class="hability">PostgresSQL</span>
         <span class="hability">MySQL</span>
         <span class="hability">React</span>
+        <span class="hability">TypeScript</span>
       </div>
     </div>
     <div class="container-info-img-conpetencias">
@@ -232,6 +233,7 @@
             <a>Toma de decisiones</a>
             <span class="porcentaje">100%</span>
           </li>
+          
         </ul>
       </div>
     </div>
