--- a/src/app/public/pages/about-me/about-me.component.scss
+++ b/src/app/public/pages/about-me/about-me.component.scss
@@ -204,7 +204,7 @@ i {
 .study-info {
   margin: 19px 0;
   h3{
-    color: #72a6cb;
+    color: #6a8ea8e4;
     font-style: italic;
   }
   span{
@@ -215,7 +215,7 @@ i {
 .curso-info{
   margin: 19px 0;
   h3{
-    color: #72a6cb;
+    color: #6a8ea8e4;
     font-style: italic;
   }
   p{
